# drug-solubility-predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py  predict.py  train.py
src/data/: load_data.py  load_densities.py  process.py
src/features/: smiles_featurizer.py
src/models/: solubility_model.py
src/visualization/: plots.py
